<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BadmintonBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile number</string>
    <string name="name">Name</string>
    <string name="new_user_signup">New user? SignUp</string>
    <string name="home">Home</string>
    <string name="favourite_locations">Favourite locations</string>
     <string name="courts">Courts</string>
    
    <string name="my_buddies">My buddies</string>
    <string name="my_schedule">My schedule</string>
    <string name="my_messages">My messages</string>
    <string name="tournaments">Tournaments</string>
    <string name="rules">Rules</string>
    <string name="tips_and_tricks">Tips and Tricks</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="events">Events</string>
    <string name="resources">Resources</string>
    <string name="settings">Settings</string>
    <string name="signup">Sign up</string>
    <string name="Welcome">welcome! \n You are now part of the badminton community of pune</string>
    <string name="choose_location">Choose a lcation so we can find the buddies near you...</string>
    <string name="finding_buddy">We are finding buddies nearby to you in Balewadi...</string>
    <string name="please_wait_">Please wait...</string>
    <string name="send_message">Send message</string>
    <string name="start_typing_here_">Start typing here...</string>
    <string name="send_now">Send now</string>
    
    
     <string-array name="tips">
        <item>1. Always hit the center of the shuttle. You should hit the round rubber center, or the "sweet spot" of the shuttle every single time. You can practice this technique by 1. looking right at the center of the shuttle when you hit an overhead shot.</item>
        <item>2. Hit the shuttle at the top of its arc. To benefit from the speed and height generated by the shuttle, hit it at the top of its arc. This will allow you to shoot a killer overhead and to have more control over the position of the shuttle. Don\'t wait 2. for the shuttle to come close to you, or it will be losing momentum and height.</item>
        <item>3. Always return to the middle of the court. Don\'t get out of position after you hit the shuttle. Return to the middle of the back of the court. This will make it more difficult for your opponent to run you around and to hit the shuttle in a place that you can\'t reach. Standing in the middle of the court while moving your feet and preparing for the next shot will place you in the "position of readiness."</item>
        <item>4. Hit the shuttle toward the back line. Hitting the shuttle toward the back line takes precision and strength, and it will make your opponent have to shuffle backwards and hit the shuttle with a considerable amount of strength to return your shot. If you\'re not sure where to hit the shuttle next, and the back line is wide open, aim it there. At the beginning, aim the shuttle a bit before the back line so you don\'t commit a fault if it falls out of bounds behind the back line.</item>
        <item>5. Practice your footwork. Badminton is like tennis success is all in the footwork. If you\'re flat-footed on the court, you won\'t be able to return your shots. Instead, stay on your toes, move your feet up and down as you wait to return a shot, and move your feet back and forth and side to side in tiny motions to position yourself to return the shot. Don\'t be lazy and reach out your hand too wide to try to return the shuttle instead, make tiny movements with your feet until the shuttle is in perfect position.</item>
        <item>6. Practice the short serve. Whether you\'re playing singles or doubles, the short serve will catch your opponent off guard. He won\'t be expecting it, and may not be able to run up to return the serve in time. To hit the short serve, you shouldn\'t just hit the shuttle really lightly, or it will fall on your side of the court. Instead, hit it at a higher contact point and drop it closer to the racket instead of in front of the racket.</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>

</resources>
