<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/header" />

    <EditText
        android:id="@+id/editTextSignUpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:inputType="text" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextSignUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextSignUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="phone" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="15dp"
         android:paddingBottom="15dp"
         android:layout_marginTop="10dp"
         android:textColor="@color/white"
         android:background="@color/green_light"
        android:onClick="onSignUpClick"
        android:text="@string/signup" />

</LinearLayout>